welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: not found: value getdirection
	(getdirection()==Direction.EST,estFaceMur) match {
         ^SnakeBuggle:13: error: value unary_! is not a member of Unit
while (!fonctionTest())
       ^SnakeBuggle:15: error: not found: value getdirection
		{if (Direction.EST==getdirection())
                                    ^